<resources>
    <string name="app_name">NetFilm</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorite">Bookmark</string>
    <string name="title_movie">Title</string>
    <string name="overview_movie">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="rating_count">Rating Count</string>
</resources>